CSS/main.css
/*
QUT Capstone Project 2017
Project Owner: Nursery Road State Special School

SNAP - Social Networking Action Platform

Author: Robert Piper
Author: Heath Mayocchi
Author: Levinard Hugo
Author: David MacKenzie
*/

/* 
USER HOME PAGE
*/
.user_home_wrapper {
	background-color:#083045;
	text-align: center;
	font-size: 20px;
	color: #fff;
	margin-left: auto;
	margin-right: auto;
	max-width: 1100px;
	min-width: 800px;
}
.button { 
	background: #19d74f; 
	background-color:#19d74f;
	border: 3px solid black;
	color: #000;
	display: inline-block;
    cursor: pointer;
}
.btnsquare {
	width:200px;
	height:200px;
	border-radius: 25px;
	font-size: 30px;
	margin: 32px;	
}
.btncircle{
	width: 100px;
	height: 100px;
	border-radius: 50px;
	font-size: 20px;
	float: left;
	margin: 10px;
	margin-right: -100px;
}
.button:hover {
	background-color: #d6ef2f;
}
.button:focus {
	background-color: #d6ef2f;	
}
#user_profile {
	float: right;
	margin-right: 10px;
	margin-left: -100px;
}
#user_profile p {
	margin-top: -3px;
}
#user_profile img {
	width: 80px;
	height: 80px;
}
#view_feed_text {
   position: absolute;
   transform: translate(70%, -50%);
}
#make_post_text {
   position: absolute;
   transform: translate(35%, -50%);
}
#messages_text {
   position: absolute;
   transform: translate(12%, -50%);
}
#friends_text {
   position: absolute;
   transform: translate(25%, -50%);
}

